firebase, updated entries

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <li><a routerLink="funds">Search for a fund</a></li>
   <li><a routerLink="about">How it works</a></li>
   <li><a routerLink="help">Help</a></li>
-  <li><a routerLink="start">Start a GoFundMe</a></li>
+  <li><a routerLink="add">Start a GoFundMe</a></li>
 </ul>
 <div class="container">
   <div style="text-align:center">
@@ -11,3 +11,9 @@
   </div>
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
