--- a/src/app/fund-detail/fund-detail.component.html
+++ b/src/app/fund-detail/fund-detail.component.html
@@ -1,7 +1,8 @@
 <div>
-  <h3>{{fundToDisplay.title}}</h3>
-  <p>{{fundToDisplay.image}}</p>
-  <h3>{{fundToDisplay.goal}}</h3>
-  <p>{{fundToDisplay.name}}</p>
-  <p>{{fundToDisplay.lacation}}</p>
-  <p>{{fundToDisplay.description}}</p>
+  <h3>{{(fundToDisplay | async)?.title}}</h3>
+  <img src="{{fundToDisplay.imageUrl}}">
+  <h3>{{(fundToDisplay | async)?.goal}}</h3>
+  <p>{{(fundToDisplay | async)?.name}}</p>
+  <p>{{(fundToDisplay | async)?.lacation}}</p>
+  <p>{{(fundToDisplay | async)?.description}}</p>
+</div>
